# AgenticAiDesignPatterns

./: README.md  pyproject.toml
src/patternswithcrewai/: Agents.py  AugmentedLLM.py  EvaluatorOptimizer.py  OrchestratorWorkers.py  Parallelization.py  PromptChaining.py  Routing.py  __init__.py
